Add Barbican Queens Milestone 1
Change-Id: Ia5094247c864277c34a7bf69639356b01b9d1948

--- a/deliverables/queens/barbican.yaml
+++ b/deliverables/queens/barbican.yaml
@@ -3,3 +3,8 @@ launchpad: barbican
 release-model: cycle-with-milestones
 team: barbican
 type: service
+releases:
+  - projects:
+      - hash: ccc6843967cf783cfc3d7998b8a19512920b9944
+        repo: openstack/barbican
+    version: 6.0.0.0b1
