--- a/deliverables/queens/monasca-api.yaml
+++ b/deliverables/queens/monasca-api.yaml
@@ -3,3 +3,8 @@ launchpad: monasca
 release-model: cycle-with-intermediary
 team: monasca
 type: service
+releases:
+  - projects:
+      - hash: 37b2111435649cf9cc11c403b10544510022297e
+        repo: openstack/monasca-api
+    version: 2.3.0
