--- a/deliverables/queens/release-test.yaml
+++ b/deliverables/queens/release-test.yaml
@@ -14,3 +14,8 @@ releases:
         repo: openstack/release-test
         tarball-base: openstack-release-test
     version: 0.9.0
+  - projects:
+      - hash: 04ee20f0bfe8774935de33b75e87fb3b858d0733
+        repo: openstack/release-test
+        tarball-base: openstack-release-test
+    version: 0.10.0
