Add oslo releases for queens Oct 23, 2017
Change-Id: I1d14fecd43548c2dd02b64e2689dbfd835af4ec6

--- a/deliverables/queens/castellan.yaml
+++ b/deliverables/queens/castellan.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: 44ea22891d6707fcf3c55517a6adf33c13e2a913
         repo: openstack/castellan
     version: 0.14.0
+  - projects:
+      - hash: b13187b34ddcc88bee57e4e99b0115cb92540b97
+        repo: openstack/castellan
+    version: 0.14.1
