--- a/deliverables/queens/oslo.config.yaml
+++ b/deliverables/queens/oslo.config.yaml
@@ -17,3 +17,7 @@ releases:
       - hash: 0cce0be52abddc670f8d7451f240481eaa9fe208
         repo: openstack/oslo.config
     version: 4.13.1
+  - projects:
+      - hash: 36aded18660fc4d515aaabfc7bf1afbfb65e6411
+        repo: openstack/oslo.config
+    version: 4.13.2
