--- a/deliverables/queens/oslo.context.yaml
+++ b/deliverables/queens/oslo.context.yaml
@@ -21,3 +21,7 @@ releases:
       - hash: 936ce1aa54a1034f6c09e2baa588c96416322265
         repo: openstack/oslo.context
     version: 2.19.1
+  - projects:
+      - hash: e75f4c5ad91962e272d65daa770e00f70f931ecb
+        repo: openstack/oslo.context
+    version: 2.19.2
