--- a/deliverables/queens/oslo.db.yaml
+++ b/deliverables/queens/oslo.db.yaml
@@ -17,3 +17,7 @@ releases:
       - hash: ca72b340b5ddbf54ccb7e7fe0a829acc93a71672
         repo: openstack/oslo.db
     version: 4.28.0
+  - projects:
+      - hash: fa578a91a134fec9212c742205a7b717d4bacd2f
+        repo: openstack/oslo.db
+    version: 4.29.0
