--- a/deliverables/queens/oslo.log.yaml
+++ b/deliverables/queens/oslo.log.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: 2c139a13bf7d9ad62a9cc8bb9e884a1986f3e3ac
         repo: openstack/oslo.log
     version: 3.31.0
+  - projects:
+      - hash: eec56ea5ceda146b65066f150f413a2f391105d8
+        repo: openstack/oslo.log
+    version: 3.32.0
