--- a/deliverables/queens/oslo.messaging.yaml
+++ b/deliverables/queens/oslo.messaging.yaml
@@ -17,3 +17,7 @@ releases:
       - hash: a9d10d33cd51387df78a551a4c85fd24a0539e28
         repo: openstack/oslo.messaging
     version: 5.33.0
+  - projects:
+      - hash: c2bb75f1e72e2a183400ad1f540ed39fa05bc1b5
+        repo: openstack/oslo.messaging
+    version: 5.33.1
