--- a/deliverables/queens/oslo.policy.yaml
+++ b/deliverables/queens/oslo.policy.yaml
@@ -21,3 +21,7 @@ releases:
       - hash: 70ba1beb3e3c93fafc147633360df838155a82a9
         repo: openstack/oslo.policy
     version: 1.28.1
+  - projects:
+      - hash: 7ade2ed547e690d4737114af467088df17a63ac8
+        repo: openstack/oslo.policy
+    version: 1.29.0
