--- a/deliverables/queens/oslo.reports.yaml
+++ b/deliverables/queens/oslo.reports.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: eefa87ff3c84ba17bf569cb10ee00b420e7a21f4
         repo: openstack/oslo.reports
     version: 1.23.0
+  - projects:
+      - hash: b5d9bb98c38f7caf55223b2411780505f0131b14
+        repo: openstack/oslo.reports
+    version: 1.24.0
