--- a/deliverables/queens/oslo.serialization.yaml
+++ b/deliverables/queens/oslo.serialization.yaml
@@ -13,3 +13,7 @@ releases:
       - hash: cdb2f60d26e3b65b6370f87b2e9864045651c117
         repo: openstack/oslo.serialization
     version: 2.21.1
+  - projects:
+      - hash: c1a7079c26d27a2e46cca26963d3d9aa040bdbe8
+        repo: openstack/oslo.serialization
+    version: 2.21.2
