--- a/deliverables/queens/oslo.versionedobjects.yaml
+++ b/deliverables/queens/oslo.versionedobjects.yaml
@@ -13,3 +13,7 @@ releases:
       - hash: 6165add04281e9d277cda35e3266623237db1beb
         repo: openstack/oslo.versionedobjects
     version: 1.28.0
+  - projects:
+      - hash: 15c83a2654d94b364b0662c61b5ecd4b38569f62
+        repo: openstack/oslo.versionedobjects
+    version: 1.29.0
