--- a/deliverables/_independent/rally.yaml
+++ b/deliverables/_independent/rally.yaml
@@ -72,3 +72,15 @@ releases:
     projects:
       - repo: openstack/rally
         hash: 797b1735f30368d3e2b7f7323d598b23efb95bd8
+  - version: 0.9.1
+    projects:
+      - repo: openstack/rally
+        hash: ef2b6177c6a21ab28e9c24bbf18536bf076683b5
+  - version: 0.9.2
+    projects:
+      - repo: openstack/rally
+        hash: d51e44674e590dbd0437b7b1ed15e49da5e2b9a5
+  - version: 0.10.0
+    projects:
+      - repo: openstack/rally
+        hash: 7153e0cbc5b0e6433313a3bc6051b2c0775d3804
