--- a/deliverables/_independent/rally.yaml
+++ b/deliverables/_independent/rally.yaml
@@ -7,6 +7,8 @@ include-pypi-link: yes
 branches:
   - name: stable/0.9
     location: 0.9.0
+  - name: stable/0.10
+    location: 0.10.0
 releases:
   - version: 0.0.4
     projects:
