set up test for branch jobs
Change-Id: I853775bd981b3691fbbc7d4a3ed09ed42357364f
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/deliverables/queens/release-test.yaml
+++ b/deliverables/queens/release-test.yaml
@@ -2,6 +2,9 @@
 launchpad: nova
 team: 'Release Management'
 type: other
+branches:
+  - name: stable/queens
+    location: 0.10.2
 release-model: cycle-with-milestones
 releases:
   - version: 0.8.0
