--- a/deliverables/ocata/ironic-python-agent.yaml
+++ b/deliverables/ocata/ironic-python-agent.yaml
@@ -12,3 +12,7 @@ releases:
     projects:
       - repo: openstack/ironic-python-agent
         hash: 47376816753ecb81cba4c3f18356c2e161f4b6c7
+  - projects:
+      - hash: 5707c35b4186395e9dfb7818656d8e4929f0613c
+        repo: openstack/ironic-python-agent
+    version: 2.0.1
