--- a/deliverables/newton/ironic.yaml
+++ b/deliverables/newton/ironic.yaml
@@ -36,3 +36,7 @@ releases:
     projects:
       - repo: openstack/ironic
         hash: ebe708924c3559fb60be353ec8a4c56609320ad4
+  - projects:
+      - hash: 58a41817fde4088cbf4a51991ed71663f86348fb
+        repo: openstack/ironic
+    version: 6.3.0
