Neutron: release Queens M-1 milestones for neutron projects
Change-Id: Ie6809a52fa2306c45731daeed90cc3529c32719b

--- a/deliverables/queens/networking-bagpipe.yaml
+++ b/deliverables/queens/networking-bagpipe.yaml
@@ -4,3 +4,8 @@ team: neutron
 type: other
 release-model: cycle-with-milestones
 include-pypi-link: yes
+releases:
+  - projects:
+      - hash: d94693f181f83c18d0c84af02a4787575dcfecc9
+        repo: openstack/networking-bagpipe
+    version: 8.0.0.0b1
