--- a/deliverables/queens/networking-bgpvpn.yaml
+++ b/deliverables/queens/networking-bgpvpn.yaml
@@ -4,3 +4,8 @@ team: neutron
 type: other
 release-model: cycle-with-milestones
 include-pypi-link: yes
+releases:
+  - projects:
+      - hash: 546d5b46a0499ad4a39da946c3302f3deb6871e2
+        repo: openstack/networking-bgpvpn
+    version: 8.0.0.0b1
