--- a/deliverables/queens/networking-sfc.yaml
+++ b/deliverables/queens/networking-sfc.yaml
@@ -4,3 +4,8 @@ team: neutron
 type: other
 release-model: cycle-with-milestones
 include-pypi-link: yes
+releases:
+  - projects:
+      - hash: 580faa9bf1a01fd62cb9d0fe4a1c9fd0c40b50b1
+        repo: openstack/networking-sfc
+    version: 6.0.0.0b1
