--- a/deliverables/queens/networking-odl.yaml
+++ b/deliverables/queens/networking-odl.yaml
@@ -4,3 +4,8 @@ team: neutron
 type: other
 release-model: cycle-with-milestones
 include-pypi-link: yes
+releases:
+  - projects:
+      - hash: 180440ff9d8c4e7c5b1ef4bdf0c5868e34fabcc6
+        repo: openstack/networking-odl
+    version: 12.0.0.0b1
