--- a/deliverables/pike/ironic-python-agent.yaml
+++ b/deliverables/pike/ironic-python-agent.yaml
@@ -1,6 +1,8 @@
 ---
 launchpad: ironic-python-agent
 release-model: cycle-with-intermediary
+include-pypi-link: yes
+release-type: python-pypi
 team: ironic
 type: other
 releases:
@@ -16,6 +18,10 @@ releases:
       - hash: 81ac0b4115633437a53da99cd73ac6663e0b98e4
         repo: openstack/ironic-python-agent
     version: 2.2.1
+  - projects:
+      - hash: bd8c6c7420c5a913ff407da569c1b8dfbc0a488a
+        repo: openstack/ironic-python-agent
+    version: 2.2.2
 branches:
   - location: 2.2.0
     name: stable/pike
