--- a/deliverables/queens/release-test.yaml
+++ b/deliverables/queens/release-test.yaml
@@ -24,3 +24,8 @@ releases:
         repo: openstack/release-test
         tarball-base: openstack-release-test
     version: 0.10.0.0b1
+  - projects:
+      - hash: 94bf6e8a7e88063b0b7b1460486ad4e52ca2bc64
+        repo: openstack/release-test
+        tarball-base: openstack-release-test
+    version: 0.10.1
