--- a/deliverables/queens/ironic-inspector.yaml
+++ b/deliverables/queens/ironic-inspector.yaml
@@ -1,5 +1,11 @@
 ---
 launchpad: ironic-inspector
 release-model: cycle-with-intermediary
+release-type: python-pypi
 team: ironic
 type: other
+releases:
+  - projects:
+      - hash: 04e646c6429b128039a572805178ac99113bee5e
+        repo: openstack/ironic-inspector
+    version: 6.1.0
