--- a/deliverables/pike/ironic.yaml
+++ b/deliverables/pike/ironic.yaml
@@ -28,3 +28,7 @@ releases:
       - hash: feb64c2a5837081789b7d3cbe67dd437f0b20f1e
         repo: openstack/ironic
     version: 9.1.1
+  - projects:
+      - hash: cf3665fe1c60d43aa39f1880e427875c9c571058
+        repo: openstack/ironic
+    version: 9.1.2
