--- a/deliverables/pike/heat.yaml
+++ b/deliverables/pike/heat.yaml
@@ -33,3 +33,7 @@ releases:
       - repo: openstack/heat
         hash: 6b7b13250adbfaedca206be0ab59f730bd28a014
     version: 9.0.0
+  - version: 9.0.1
+    projects:
+      - repo: openstack/heat
+        hash: be1e2e9fa5b44fb186d1705e0fefff4b8eec2233
