--- a/deliverables/ocata/heat.yaml
+++ b/deliverables/ocata/heat.yaml
@@ -49,3 +49,7 @@ releases:
     projects:
       - repo: openstack/heat
         hash: 1e57d98611b661795d2977d00405385dec609dba
+  - version: 8.0.5
+    projects:
+      - repo: openstack/heat
+        hash: e671d93b1508650d1da3587f96a2f8561825e24c
