--- a/deliverables/ocata/python-heatclient.yaml
+++ b/deliverables/ocata/python-heatclient.yaml
@@ -31,3 +31,7 @@ releases:
     projects:
       - repo: openstack/python-heatclient
         hash: 56b497539877ca9e0e83ce6dad5a7f862efc7a63
+  - version: 1.8.2
+    projects:
+      - repo: openstack/python-heatclient
+        hash: 082f728d179dc2bba64e9821eaec18f429aa15fd
