--- a/deliverables/_independent/monasca-grafana-datasource.yaml
+++ b/deliverables/_independent/monasca-grafana-datasource.yaml
@@ -7,3 +7,7 @@ releases:
     projects:
       - repo: openstack/monasca-grafana-datasource
         hash: 19a5c2674463af3c317b92c79f18b3609f9be96e
+  - projects:
+      - hash: d17911fabdd43d783133a480e91843b5f0656480
+        repo: openstack/monasca-grafana-datasource
+    version: 1.1.0
