add explicit release types for neutron and horizon plugins
Be explicit about the projects that need special release jobs so we
know they are configured correctly.

See
http://lists.openstack.org/pipermail/openstack-dev/2017-October/123926.html
for more details.

Change-Id: I73307fb3233c128c8f878da89c1e850831135bc3
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/deliverables/queens/neutron-fwaas.yaml
+++ b/deliverables/queens/neutron-fwaas.yaml
@@ -3,6 +3,7 @@ launchpad: neutron
 team: neutron
 type: other
 release-model: cycle-with-milestones
+release-type: neutron
 releases:
   - projects:
       - hash: 073622b9df508cfb54fade4073c5243001b61a51
