--- a/deliverables/queens/networking-midonet.yaml
+++ b/deliverables/queens/networking-midonet.yaml
@@ -3,6 +3,7 @@ launchpad: networking-midonet
 team: neutron
 type: other
 release-model: cycle-with-milestones
+release-type: neutron
 include-pypi-link: yes
 releases:
   - projects:
