--- a/deliverables/queens/networking-ovn.yaml
+++ b/deliverables/queens/networking-ovn.yaml
@@ -3,6 +3,7 @@ launchpad: networking-ovn
 team: neutron
 type: other
 release-model: cycle-with-milestones
+release-type: neutron
 include-pypi-link: yes
 releases:
   - projects:
