set release types for ocatavia and neutron-lbaas
Change-Id: Ie73975b24ef979e5f0d7b3c22ee56ea758bcd1f8
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/deliverables/queens/neutron-lbaas-dashboard.yaml
+++ b/deliverables/queens/neutron-lbaas-dashboard.yaml
@@ -2,5 +2,6 @@
 include-pypi-link: yes
 storyboard: 907
 release-model: cycle-with-milestones
+release-type: horizon
 team: octavia
 type: horizon-plugin
