--- a/deliverables/queens/neutron-lbaas.yaml
+++ b/deliverables/queens/neutron-lbaas.yaml
@@ -1,5 +1,7 @@
 ---
 storyboard: 906
 release-model: cycle-with-milestones
+release-type: neutron
+release-notes: https://docs.openstack.org/releasenotes/neutron-lbaas/unreleased.html
 team: octavia
 type: other
