--- a/deliverables/queens/octavia-dashboard.yaml
+++ b/deliverables/queens/octavia-dashboard.yaml
@@ -2,5 +2,6 @@
 include-pypi-link: yes
 storyboard: 909
 release-model: cycle-with-milestones
+release-type: horizon
 team: octavia
 type: horizon-plugin
