set designate-dashboard release type explicitly
Change-Id: I5c2773afc5c83a138e3f3c77abd243883d5b23c7
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/deliverables/queens/designate-dashboard.yaml
+++ b/deliverables/queens/designate-dashboard.yaml
@@ -1,5 +1,9 @@
 ---
 launchpad: designate-dashboard
 release-model: cycle-with-milestones
+# NOTE(dhellmann): Be explicit about using the release type
+# instead of relying on automatically detecting it, to avoid the npm
+# version checking logic.
+release-type: python-service
 team: designate
 type: horizon-plugin
