log the output of list-changes to a separate file for easier reading
Having the rather complex output of list-changes mixed in with the
main job log can make it difficult to read. Continue to include the
data in the main log file but also write it to a separate file that is
easier to consume.

Change-Id: If4d3b56c76b2bf513b2d44ffedf5825f562f4bfb
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,9 @@ commands =
 [testenv:list-changes]
 setenv =
     PYTHONUNBUFFERED=1
-commands = list-changes {posargs}
+    LOGDIR={envdir}/log
+commands =
+    {toxinidir}/tools/tox-log-command.sh list-changes {posargs}
 
 [testenv:pep8]
 deps = flake8>=2.2.4,<=2.4.1
