provide separate release types for server and non-server deliverables
Change the 'std' release type to 'python-server' and add a
'python-pypi' release type for deliverables that are published to
PyPI.

Separate the release job validation from the validation of release
version numbers and other settings to make the logic clearer.

Add a new function to determine the release type for a project, either
by checking the explicit value or guessing.

Update the unit tests that relied on 'std'.

Remove a unit test that tested a code path that has been removed.

Change-Id: I704ec75fec61ecb6ee379239a5fa8612cb01b426
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/deliverables/queens/release-test.yaml
+++ b/deliverables/queens/release-test.yaml
@@ -2,6 +2,7 @@
 launchpad: nova
 team: 'Release Management'
 type: other
+release-type: python-pypi
 branches:
   - name: stable/queens
     location: 0.10.2
