add releasenotes for Telemetry Pike
Change-Id: I442b64b6faed79984686a7647fa3b0ff95f4d4e0

--- a/deliverables/pike/aodh.yaml
+++ b/deliverables/pike/aodh.yaml
@@ -2,6 +2,8 @@
 launchpad: aodh
 release-model: cycle-with-intermediary
 team: Telemetry
+release-notes: https://docs.openstack.org/releasenotes/aodh/pike.html
+release-type: python-pypi
 type: service
 releases:
   - projects:
