--- a/deliverables/pike/ceilometer.yaml
+++ b/deliverables/pike/ceilometer.yaml
@@ -2,6 +2,7 @@
 launchpad: ceilometer
 release-model: cycle-with-intermediary
 team: Telemetry
+release-notes: https://docs.openstack.org/releasenotes/ceilometer/pike.html
 type: service
 releases:
   - projects:
