--- a/deliverables/pike/panko.yaml
+++ b/deliverables/pike/panko.yaml
@@ -2,6 +2,8 @@
 launchpad: panko
 release-model: cycle-with-intermediary
 team: Telemetry
+release-notes: https://docs.openstack.org/releasenotes/panko/pike.html
+release-type: python-pypi
 type: service
 releases:
   - projects:
