fix release settings for a few independent deliverables
The new validation rules reported errors for several
deliverables. These were the ones that had obvious fixes. We can
address the others when someone tries to release them.

Change-Id: I1b2ecd5189902e4587d4de47952aca4051887bce
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/deliverables/_independent/dragonflow.yaml
+++ b/deliverables/_independent/dragonflow.yaml
@@ -2,6 +2,7 @@
 launchpad: dragonflow
 team: dragonflow
 type: other
+release-type: neutron
 branches:
   - name: stable/newton
     location: 2.0.0
