--- a/deliverables/_independent/whereto.yaml
+++ b/deliverables/_independent/whereto.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: 5e8fd69c3b1feaf78655ff7af06ebb16804087d4
         repo: openstack/whereto
     version: 0.2.0
+  - projects:
+      - hash: 7e37a20c79ff02615fbee1acc9d449195b36001a
+        repo: openstack/whereto
+    version: 0.3.0
