--- a/deliverables/queens/taskflow.yaml
+++ b/deliverables/queens/taskflow.yaml
@@ -13,3 +13,7 @@ releases:
       - hash: a121be0ac2e53ecda9f0e189646a9ee5edd39a80
         repo: openstack/taskflow
     version: 2.16.0
+  - projects:
+      - hash: 8ca9a30599972a3e2d6d2cd6d5cd8e08f7496b33
+        repo: openstack/taskflow
+    version: 2.17.0
